<resources xmlns:tools="http://schemas.android.com/tools">
  <string name="nav_header_desc">Navigation header</string>
  <string name="menu_options">Options</string>
  <string name="menu_my_downloads">My Downloads</string>
  <string name="menu_help">Help</string>
  <string name="exploration_activity_title">Exploration Player</string>
  <string name="play_exploration_button_text">Play exploration</string>
  <string name="help_activity_title">Help</string>
  <string name="bottom_sheet_options_menu_close">Close</string>
  <string name="menu_switch_profile">Switch Profile</string>
  <string name="developer_options">Developer Options</string>
  <string name="administrator_controls">Administrator Controls</string>
  <string name="drawer_open_content_description">Navigation Menu Open</string>
  <string name="drawer_close_content_description">Navigation Menu Close</string>
  <string name="audio_play_description">Play audio</string>
  <string name="audio_pause_description">Pause audio</string>
  <string name="audio_unavailable_in_selected_language">%s audio is unavailable.</string>
  <string name="audio_language_select_dialog_okay_button" tools:ignore="ButtonCase,Typos">Ok</string>
  <string name="audio_language_select_dialog_cancel_button">Cancel</string>
  <string name="audio_language_select_dialog_title">Audio Language</string>
  <string name="audio_dialog_offline_title">Currently Offline</string>
  <string name="audio_dialog_offline_message">Make sure Wi-Fi or cellular data is turned on, then try again.</string>
  <string name="audio_dialog_offline_positive" tools:ignore="ButtonCase,Typos">Ok</string>
  <string name="cellular_data_alert_dialog_okay_button" tools:ignore="ButtonCase,Typos">Ok</string>
  <string name="cellular_data_alert_dialog_cancel_button">Cancel</string>
  <string name="cellular_data_alert_dialog_title">Currently on Cellular Data</string>
  <string name="cellular_data_alert_dialog_description">Streaming audio may use a lot of cellular data.</string>
  <string name="cellular_data_alert_dialog_checkbox">Don\'t show this message again</string>
  <string name="concept_card_toolbar_title">Concept Card</string>
  <string name="concept_card_one_button_text">Concept Card 1</string>
  <string name="concept_card_two_button_text">Concept Card 2</string>
  <string name="revision_card_toolbar_title">Study Guide</string>
  <string name="worked_example_question_label">Question:</string>
  <string name="worked_example_answer_label">Answer:</string>
  <string name="unsaved_exploration_dialog_title">Leave to Topic Page?</string>
  <string name="unsaved_exploration_dialog_description">Your progress will not be saved.</string>
  <string name="unsaved_exploration_dialog_leave_button">Leave</string>
  <string name="unsaved_exploration_dialog_cancel_button">Cancel</string>
  <string name="stop_exploration_dialog_title">Leave to Topic Page?</string>
  <string name="stop_exploration_dialog_description">Your progress will not be saved.</string>
  <string name="stop_exploration_dialog_cancel_button">Cancel</string>
  <string name="stop_exploration_dialog_leave_button">Leave</string>
  <string name="exploration_exit_button_spotlight_hint">Exit anytime using this button. We will save your progress.</string>
  <string name="voiceover_icon_spotlight_hint">Would you like %s to read for you? Tap on this button to try it!</string>
  <string name="voiceover_language_icon_spotlight_hint">Tap to change the voiceover language.</string>
  <string name="progress_database_full_dialog_title">Maximum storage capacity reached</string>
  <string name="progress_database_full_dialog_description">Saved progress for the lesson \"%s\" will be deleted.</string>
  <string name="progress_database_full_dialog_continue_button">Continue</string>
  <string name="progress_database_full_dialog_leave_without_saving_progress_button">Leave without saving progress</string>
  <string name="progress_database_full_dialog_back_to_lesson_button">Back to lesson</string>
  <string name="topic_practice_master_these_skills">Master These Skills</string>
  <string name="topic_name_text_view">Ratios and Proportional Reasoning</string>
  <string name="topic_practice_skills_description">Select skills that you would like to practice.</string>
  <string name="topic_practice_start">Start</string>
  <string name="info_tab_content_description">Details about the topic.</string>
  <string name="revision_tab_content_description">Revise concepts learned from completed lessons here.</string>
  <string name="practice_tab_content_description">Practice the concepts learned from completed lessons.</string>
  <string name="lessons_tab_content_description">Tap here to start playing a lesson.</string>
  <string name="topic_lessons_tab_spotlight_hint">Find all your lessons here.</string>
  <string name="topic_revision_tab_spotlight_hint">Revise concepts learned from completed lessons here.</string>
  <string name="first_chapter_spotlight_hint">Tap here to start playing a lesson.</string>
  <string name="state_continue_button">Continue</string>
  <string name="state_continue_submit">Submit</string>
  <string name="previous_state_description">Navigate to the previous card</string>
  <string name="next_state_description">Navigate to the next card</string>
  <string name="state_submit_button">Submit</string>
  <string name="submit_button_text">Submit</string>
  <string name="state_flashback_button">See example</string>
  <string name="state_return_to_question_button">Return to question</string>
  <string name="lesson_replay_button_text">Replay</string>
  <string name="state_end_exploration_button">Return To Topic</string>
  <string name="lesson_progress_indicator_content_description">Completed %1$s lesson checkpoints out of %2$s.</string>
  <string name="previous_responses_header">Previous Responses (%s)</string>
  <string name="image_interaction_answer_text">Clicks on %s</string>
  <string name="image_error_empty_input">Select an image to continue.</string>
  <string name="state_learn_again_button">Learn Again</string>
  <string name="topic_download_text">(%s)</string>
  <string name="see_more">See More</string>
  <string name="see_less">See Less</string>
  <string name="sample_text_view_text">This is a sample text view</string>
  <string name="FAQs">FAQs</string>
  <string name="featured_questions">Featured Questions</string>
  <string name="frequently_asked_questions">Frequently Asked Questions</string>
  <string name="faq_activity_title">FAQs (Frequently Asked Questions)</string>
  <string name="onboarding_activity_title">Introduction</string>
  <string name="frequently_asked_questions_FAQ">Frequently Asked Questions (FAQs)</string>
  <string name="info">Info</string>
  <string name="learn">Learn</string>
  <string name="practice">Practice</string>
  <string name="study">Study</string>
  <string name="administrator_controls_title">Administrator Controls</string>
  <string name="topic_page">Topic page</string>
  <string name="topic_name">Topic: %s</string>
  <string name="topic">Topic</string>
  <string name="ongoing_topic_list_activity_title">Topics in Progress</string>
  <string name="topic_story_progress_percentage">%s\%%</string>
  <string name="topic_play_chapter_index">%s</string>
  <string name="chapter_name">Chapter %1$s: %2$s</string>
  <string name="chapter_completed">Chapter %1$s with title %2$s is completed</string>
  <string name="chapter_in_progress">Chapter %1$s with title %2$s is in progress</string>
  <string name="chapter_prerequisite_title_label">Complete Chapter %1$s: %2$s to unlock this chapter.</string>
  <string name="chapter_locked_prerequisite_title_label">Chapter %1$s: %2$s is currently locked. Please complete chapter %3$s: %4$s to unlock this chapter.</string>
  <string name="chapter_prerequisite_title_label_without_chapter_title">Complete the previous chapter to unlock this chapter.</string>
  <string name="text_input_default_content_description">Enter text.</string>
  <string name="fractions_default_hint_text">Enter a fraction in the form x/x, or a mixed number in the form x x/x.</string>
  <string name="fractions_default_hint_text_no_integer">Enter a fraction in the form x/x.</string>
  <string name="numeric_input_hint">Enter a number.</string>
  <string name="number_with_units_input_hint_text">Write numbers with units here.</string>
  <string name="numeric_expression_default_hint_text">Type an expression here, using only numbers.</string>
  <string name="numeric_expression_error_empty_input">Enter a numeric expression to continue.</string>
  <string name="algebraic_expression_default_hint_text">Type an expression here.</string>
  <string name="algebraic_expression_error_empty_input">Enter an algebraic expression to continue.</string>
  <string name="math_equation_default_hint_text">Type an equation here.</string>
  <string name="math_equation_error_empty_input">Enter an equation to continue.</string>
  <string name="math_expression_error_spaces_in_numerical_input">Please remove the spaces between numbers in your answer.</string>
  <string name="math_expression_error_unbalanced_parentheses">Please close or remove parentheses.</string>
  <string name="math_expression_error_single_redundant_parentheses">Please remove the parentheses around the whole answer: \'%s\'.</string>
  <string name="math_expression_error_multiple_redundant_parentheses">Please remove extra parentheses around the \'(%1$s)\', for example: \'%1$s\'.</string>
  <string name="math_expression_error_redundant_parentheses_individual_term">Please remove the extra parentheses around \'(%1$s)\', for example: \'%1$s\'.</string>
  <string name="math_expression_error_unnecessary_symbols">There is an invalid \'%s\' in the answer. Please remove it.</string>
  <string name="math_expression_error_number_after_var_term">Please rearrange the order of %1$s &amp; %2$s. For example: %2$s%1$s.</string>
  <string name="math_expression_error_consecutive_binary_operators">%1$s and %2$s should be separated by a number or a variable.</string>
  <string name="math_expression_error_consecutive_unary_operators">Please remove the extra symbols in your answer.</string>
  <string name="math_expression_error_missing_lhs_for_addition_operator">Is there a number or a variable missing before or after the addition symbol \'%1$s\'? If not, please remove the extra \'%1$s\'.</string>
  <string name="survey_continue_survey_button">Continue Survey</string>
  <string name="survey_exit_button">Exit</string>
  <string name="survey_exit_confirmation_text">Are you sure you want to exit the survey?</string>
  <string name="create_profile_activity_header">What should we call you?</string>
  <string name="create_profile_activity_nickname_label">Nickname</string>
  <string name="create_profile_activity_nickname_error">Click in the box above to type a nickname.</string>
  <string name="onboarding_step_count_three">STEP 3 OF 5</string>
  <string name="onboarding_learner_intro_activity_text">Welcome, %s!</string>
  <string name="onboarding_learner_intro_classroom_text">Learn Math through fun, story-based lessons.</string>
  <string name="onboarding_learner_intro_practice_text">Try practice questions to test your knowledge.</string>
  <string name="onboarding_learner_intro_feedback_text">Get feedback to improve using %s\'s corrections.</string>
  <string name="onboarding_step_count_four">STEP 4 OF 5</string>
  <string name="onboarding_otter_content_description">Cute otter wearing glasses.</string>
  <string name="onboarding_navigation_back">Back</string>
  <string name="onboarding_navigation_continue">Continue</string>
  <string name="flashback_confirmation_dialog_not_now_text">Not now</string>
  <string name="flashback_confirmation_dialog_title_text">Need help? No problem.</string>
  <string name="flashback_confirmation_dialog_message_text">Review the previous question\'s solution</string>
</resources>