<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/component_color_onboarding_shared_white_color">

    <androidx.constraintlayout.widget.Guideline
      android:id="@+id/create_profile_header_guide"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      app:layout_constraintGuide_percent="0.40" />

    <TextView
      android:id="@+id/create_profile_title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:fontFamily="sans-serif"
      android:text="@string/create_profile_activity_header"
      android:textColor="@color/color_palette_onboarding_black_color"
      android:textSize="20sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/create_profile_header_guide" />

    <TextView
      android:id="@+id/create_profile_nickname_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="20dp"
      android:layout_marginTop="20dp"
      android:fontFamily="sans-serif"
      android:labelFor="@id/create_profile_nickname_edittext"
      android:text="@string/create_profile_activity_nickname_label"
      android:textColor="@color/component_color_shared_primary_text_color"
      android:textSize="12sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/create_profile_title" />

    <EditText
      android:id="@+id/create_profile_nickname_edittext"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="20dp"
      android:layout_marginTop="20dp"
      android:layout_marginEnd="20dp"
      android:autofillHints="false"
      android:background="@drawable/edit_text_background_border"
      android:fontFamily="sans-serif"
      android:inputType="text"
      android:padding="8dp"
      android:textSize="16sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/create_profile_nickname_label"
      tools:text="John" />

    <TextView
      android:id="@+id/create_profile_nickname_error"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="20dp"
      android:layout_marginTop="12dp"
      android:fontFamily="sans-serif"
      android:labelFor="@id/create_profile_nickname_edittext"
      android:text="@string/create_profile_activity_nickname_error"
      android:textColor="@color/component_color_shared_input_error_color"
      android:textSize="12sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/create_profile_nickname_edittext" />

    <TextView
      android:id="@+id/onboarding_steps_count"
      style="@style/OnboardingStepCountStyle"
      android:layout_margin="@dimen/onboarding_language_text_margin"
      android:text="@string/onboarding_step_count_three"
      app:layout_constraintBottom_toTopOf="@id/onboarding_navigation_back"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" />

    <Button
      android:id="@+id/onboarding_navigation_back"
      style="@style/OnboardingNavigationSecondaryButton"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:text="@string/onboarding_navigation_back"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toStartOf="@id/onboarding_navigation_continue"
      app:layout_constraintStart_toStartOf="parent" />

    <Button
      android:id="@+id/onboarding_navigation_continue"
      style="@style/OnboardingNavigationPrimaryButton"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:text="@string/onboarding_navigation_continue"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@id/onboarding_navigation_back" />
  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>