<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/component_color_shared_white_background_color">

    <TextView
      android:id="@+id/exit_survey_confirmation_text"
      style="@style/TextViewCenter"
      android:layout_margin="@dimen/survey_free_form_text_margin"
      android:text="@string/survey_exit_confirmation_text"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <Button
      android:id="@+id/continue_survey_button"
      style="@style/SurveyPrimaryButton"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/survey_submit_button_margin_top"
      android:text="@string/survey_continue_survey_button"
      app:layout_constraintEnd_toEndOf="@id/exit_survey_confirmation_text"
      app:layout_constraintStart_toStartOf="@id/exit_survey_confirmation_text"
      app:layout_constraintTop_toBottomOf="@id/exit_survey_confirmation_text" />

    <Button
      android:id="@+id/exit_survey_button"
      style="@style/SurveySecondaryButton"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/survey_submit_button_margin_top"
      android:text="@string/survey_exit_button"
      app:layout_constraintEnd_toEndOf="@id/continue_survey_button"
      app:layout_constraintStart_toStartOf="@id/continue_survey_button"
      app:layout_constraintTop_toBottomOf="@id/continue_survey_button" />
  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>